fixed resourcebar overflow

--- a/static/style.css
+++ b/static/style.css
@@ -565,13 +565,17 @@ label {
     margin-right: -200px;
     transition: all 0.4s ease;
     padding-top: 60px;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
+}
+
+.resourcedivcontent:hover {
+    overflow-y: auto;
 }
 
 .resourcedivcontentshow {
     margin: 0;
-    box-shadow: rgba(58, 59, 69, 0.8) 0px 0px 8px 0px;
+    box-shadow: rgba(58, 59, 69, 0.4) 0px 0px 6px 0px;
 }
 
 .resourcedivcontent p {
